// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DrawerContentContainer /> renders correctly when closed 1`] = `
<div
  className="DrawerContentContainer"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": "-80%",
      "position": "fixed",
      "top": 0,
      "transform": "translateX(0%)",
      "transition": "transform .2s ease-in-out",
      "width": "80%",
      "zIndex": 1,
    }
  }
>
  <div />
</div>
`;

exports[`<DrawerContentContainer /> renders correctly when swiping 1`] = `
<div
  className="DrawerContentContainer"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": "-80%",
      "position": "fixed",
      "top": 0,
      "transform": "translateX(50%)",
      "transition": "",
      "width": "80%",
      "zIndex": 1,
    }
  }
>
  <div />
</div>
`;
